--- a/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
+++ b/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
@@ -86,6 +86,8 @@
             (search)="onHeaderSearchInput($event)"
             (primary)="onHeaderActionClick()"
             (secondary)="onHeaderSecondaryClick()"
+            [tertiaryLabel]="headerTertiaryLabel"
+            (tertiary)="onHeaderTertiaryClick()"
           />
           <div class="header-filter-row" *ngIf="showDiscourseFilters">
             <button
