--- a/apps/k-maps/src/app/features/arabic/lessons/ar-lesson-view/quran-lesson-details/quran-lesson-details.component.html
+++ b/apps/k-maps/src/app/features/arabic/lessons/ar-lesson-view/quran-lesson-details/quran-lesson-details.component.html
@@ -24,29 +24,29 @@
   </ul>
 </div>
 
-<div class="comprehension-section mb-4" *ngIf="reflectiveQuestions.length">
-  <h6 class="card-title section-heading">Reflective Questions</h6>
-  <hr class="section-divider" />
-  <div class="comp-card" *ngFor="let item of reflectiveQuestions">
-    <div class="arabic-question" *ngIf="item?.question_ar">{{ item.question_ar }}</div>
-    <div class="question-text">{{ item?.question }}</div>
-    <p class="text-muted" *ngIf="item?.answer_hint">{{ item.answer_hint }}</p>
-    <div class="tags" *ngIf="item?.tags?.length">{{ formatTags(item.tags) }}</div>
-    <div class="text-muted small" *ngIf="item?.quranic_ref">Ref: {{ item.quranic_ref }}</div>
+  <div class="comprehension-section mb-4" *ngIf="reflectiveQuestions.length">
+    <h6 class="card-title section-heading">Reflective Questions</h6>
+    <hr class="section-divider" />
+    <div class="comp-card" *ngFor="let item of reflectiveQuestions">
+      <div class="arabic-question" *ngIf="item?.['question_ar']">{{ item['question_ar'] }}</div>
+      <div class="question-text">{{ item?.['question'] }}</div>
+      <p class="text-muted" *ngIf="item?.['answer_hint']">{{ item['answer_hint'] }}</p>
+      <div class="tags" *ngIf="item?.['tags']?.length">{{ formatTags(item['tags']) }}</div>
+      <div class="text-muted small" *ngIf="item?.['quranic_ref']">Ref: {{ item['quranic_ref'] }}</div>
+    </div>
   </div>
-</div>
 
-<div class="comprehension-section mb-4" *ngIf="analyticalQuestions.length">
-  <h6 class="card-title section-heading">Analytical Questions</h6>
-  <hr class="section-divider" />
-  <div class="comp-card" *ngFor="let item of analyticalQuestions">
-    <div class="arabic-question" *ngIf="item?.question_ar">{{ item.question_ar }}</div>
-    <div class="question-text">{{ item?.question }}</div>
-    <p class="text-muted" *ngIf="item?.answer_hint">{{ item.answer_hint }}</p>
-    <div class="tags" *ngIf="item?.tags?.length">{{ formatTags(item.tags) }}</div>
-    <div class="text-muted small" *ngIf="item?.quranic_ref">Ref: {{ item.quranic_ref }}</div>
+  <div class="comprehension-section mb-4" *ngIf="analyticalQuestions.length">
+    <h6 class="card-title section-heading">Analytical Questions</h6>
+    <hr class="section-divider" />
+    <div class="comp-card" *ngFor="let item of analyticalQuestions">
+      <div class="arabic-question" *ngIf="item?.['question_ar']">{{ item['question_ar'] }}</div>
+      <div class="question-text">{{ item?.['question'] }}</div>
+      <p class="text-muted" *ngIf="item?.['answer_hint']">{{ item['answer_hint'] }}</p>
+      <div class="tags" *ngIf="item?.['tags']?.length">{{ formatTags(item['tags']) }}</div>
+      <div class="text-muted small" *ngIf="item?.['quranic_ref']">Ref: {{ item['quranic_ref'] }}</div>
+    </div>
   </div>
-</div>
 
 <div class="mcq-section" *ngIf="mcqKeys.length">
   <h6 class="card-title section-heading">MCQs</h6>
@@ -55,14 +55,14 @@
     <div class="mb-3">
       <div class="memory-label">{{ mcqLabel(key) }}</div>
       <div class="comp-card" *ngFor="let mcq of mcqGroups[key]">
-        <div class="question-text">{{ mcq.question }}</div>
+        <div class="question-text">{{ mcq?.['question'] }}</div>
         <ul class="list-unstyled mcq-options">
-          <li *ngFor="let option of mcq.options" [class.correct]="option?.is_correct">
-            {{ option?.option }}
+          <li *ngFor="let option of mcq?.['options']" [class.correct]="option?.['is_correct']">
+            {{ option?.['option'] }}
           </li>
         </ul>
-        <div class="text-muted small" *ngIf="mcq.explanation">{{ mcq.explanation }}</div>
-        <div class="text-muted small" *ngIf="mcq.tags?.length">Tags: {{ formatTags(mcq.tags) }}</div>
+        <div class="text-muted small" *ngIf="mcq?.['explanation']">{{ mcq['explanation'] }}</div>
+        <div class="text-muted small" *ngIf="mcq?.['tags']?.length">Tags: {{ formatTags(mcq['tags']) }}</div>
       </div>
     </div>
   </div>
